--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,18 @@
             <version>2.13.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.6.4</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
