--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 server.servlet.context-path=/api
+spring.servlet.multipart.max-request-size=81373370
+spring.servlet.multipart.max-file-size=81373370
